tests/x32/snapshots/x32__test_patching__change_dylib_name-2.snap
---
source: tests/x32/test_patching.rs
expression: changed_macho.libs
---
[
    "self",
    "very_very_very_very_very_very_very_longid",
]
