tests/x32/snapshots/x32__test_patching__change_dylib_name.snap
---
source: tests/x32/test_patching.rs
expression: changed_macho
---
MachO {
    header: Header {
        magic: 0xfeedfacf,
        cputype: 16777228,
        cpusubtype: 0x0,
        filetype: "EXECUTE",
        ncmds: 18,
        sizeofcmds: 1096,
        flags: 0x200085,
        reserved: 0x0,
    },
    load_commands: [
        LoadCommand {
            offset: 32,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 72,
                    segname: [
                        95,
                        95,
                        80,
                        65,
                        71,
                        69,
                        90,
                        69,
                        82,
                        79,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 0,
                    vmsize: 4294967296,
                    fileoff: 0,
                    filesize: 0,
                    maxprot: 0,
                    initprot: 0,
                    nsects: 0,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 104,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 392,
                    segname: [
                        95,
                        95,
                        84,
                        69,
                        88,
                        84,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 4294967296,
                    vmsize: 16384,
                    fileoff: 0,
                    filesize: 16384,
                    maxprot: 5,
                    initprot: 5,
                    nsects: 4,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 496,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 152,
                    segname: [
                        95,
                        95,
                        68,
                        65,
                        84,
                        65,
                        95,
                        67,
                        79,
                        78,
                        83,
                        84,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 4294983680,
                    vmsize: 16384,
                    fileoff: 16384,
                    filesize: 16384,
                    maxprot: 3,
                    initprot: 3,
                    nsects: 1,
                    flags: 16,
                },
            ),
        },
        LoadCommand {
            offset: 648,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 72,
                    segname: [
                        95,
                        95,
                        76,
                        73,
                        78,
                        75,
                        69,
                        68,
                        73,
                        84,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 4295000064,
                    vmsize: 16384,
                    fileoff: 32768,
                    filesize: 672,
                    maxprot: 1,
                    initprot: 1,
                    nsects: 0,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 720,
            command: DyldChainedFixups(
                LinkeditDataCommand {
                    cmd: 2147483700,
                    cmdsize: 16,
                    dataoff: 32768,
                    datasize: 96,
                },
            ),
        },
        LoadCommand {
            offset: 736,
            command: DyldExportsTrie(
                LinkeditDataCommand {
                    cmd: 2147483699,
                    cmdsize: 16,
                    dataoff: 32864,
                    datasize: 48,
                },
            ),
        },
        LoadCommand {
            offset: 752,
            command: Symtab(
                SymtabCommand {
                    cmd: 2,
                    cmdsize: 24,
                    symoff: 32920,
                    nsyms: 3,
                    stroff: 32976,
                    strsize: 40,
                },
            ),
        },
        LoadCommand {
            offset: 776,
            command: Dysymtab(
                DysymtabCommand {
                    cmd: 11,
                    cmdsize: 80,
                    ilocalsym: 0,
                    nlocalsym: 0,
                    iextdefsym: 0,
                    nextdefsym: 2,
                    iundefsym: 2,
                    nundefsym: 1,
                    tocoff: 0,
                    ntoc: 0,
                    modtaboff: 0,
                    nmodtab: 0,
                    extrefsymoff: 0,
                    nextrefsyms: 0,
                    indirectsymoff: 32968,
                    nindirectsyms: 2,
                    extreloff: 0,
                    nextrel: 0,
                    locreloff: 0,
                    nlocrel: 0,
                },
            ),
        },
        LoadCommand {
            offset: 856,
            command: LoadDylinker(
                DylinkerCommand {
                    cmd: 14,
                    cmdsize: 32,
                    name: 12,
                },
            ),
        },
        LoadCommand {
            offset: 888,
            command: Uuid(
                UuidCommand {
                    cmd: 27,
                    cmdsize: 24,
                    uuid: [
                        127,
                        39,
                        98,
                        243,
                        86,
                        76,
                        51,
                        230,
                        144,
                        252,
                        56,
                        219,
                        27,
                        142,
                        12,
                        197,
                    ],
                },
            ),
        },
        LoadCommand {
            offset: 912,
            command: BuildVersion(
                BuildVersionCommand {
                    cmd: 50,
                    cmdsize: 32,
                    platform: 1,
                    minos: 851968,
                    sdk: 852736,
                    ntools: 1,
                },
            ),
        },
        LoadCommand {
            offset: 944,
            command: SourceVersion(
                SourceVersionCommand {
                    cmd: 42,
                    cmdsize: 16,
                    version: 0,
                },
            ),
        },
        LoadCommand {
            offset: 960,
            command: Main(
                EntryPointCommand {
                    cmd: 2147483688,
                    cmdsize: 24,
                    entryoff: 16232,
                    stacksize: 0,
                },
            ),
        },
        LoadCommand {
            offset: 984,
            command: LoadDylib(
                DylibCommand {
                    cmd: 12,
                    cmdsize: 72,
                    dylib: Dylib {
                        name: 24,
                        timestamp: 2,
                        current_version: 86467587,
                        compatibility_version: 65536,
                    },
                },
            ),
        },
        LoadCommand {
            offset: 1056,
            command: FunctionStarts(
                LinkeditDataCommand {
                    cmd: 38,
                    cmdsize: 16,
                    dataoff: 32912,
                    datasize: 8,
                },
            ),
        },
        LoadCommand {
            offset: 1072,
            command: DataInCode(
                LinkeditDataCommand {
                    cmd: 41,
                    cmdsize: 16,
                    dataoff: 32920,
                    datasize: 0,
                },
            ),
        },
        LoadCommand {
            offset: 1088,
            command: CodeSignature(
                LinkeditDataCommand {
                    cmd: 29,
                    cmdsize: 16,
                    dataoff: 33024,
                    datasize: 416,
                },
            ),
        },
        LoadCommand {
            offset: 1104,
            command: Rpath(
                RpathCommand {
                    cmd: 2147483676,
                    cmdsize: 24,
                    path: 12,
                },
            ),
        },
    ],
    segments: Segments {
        segments: [
            Segment {
                cmd: 25,
                cmdsize: 72,
                segname: "__PAGEZERO",
                vmaddr: 0,
                vmsize: 4294967296,
                fileoff: 0,
                filesize: 0,
                maxprot: 0,
                initprot: 0,
                nsects: 0,
                flags: 0,
                data: 0,
                sections(): Ok(
                    [],
                ),
            },
            Segment {
                cmd: 25,
                cmdsize: 392,
                segname: "__TEXT",
                vmaddr: 4294967296,
                vmsize: 16384,
                fileoff: 0,
                filesize: 16384,
                maxprot: 5,
                initprot: 5,
                nsects: 4,
                flags: 0,
                data: 16384,
                sections(): Ok(
                    [
                        Section {
                            sectname: "__text",
                            segname: "__TEXT",
                            addr: 4294983528,
                            size: 52,
                            offset: 16232,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484672,
                        },
                        Section {
                            sectname: "__stubs",
                            segname: "__TEXT",
                            addr: 4294983580,
                            size: 12,
                            offset: 16284,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484680,
                        },
                        Section {
                            sectname: "__cstring",
                            segname: "__TEXT",
                            addr: 4294983592,
                            size: 16,
                            offset: 16296,
                            align: 0,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2,
                        },
                        Section {
                            sectname: "__unwind_info",
                            segname: "__TEXT",
                            addr: 4294983608,
                            size: 72,
                            offset: 16312,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 0,
                        },
                    ],
                ),
            },
            Segment {
                cmd: 25,
                cmdsize: 152,
                segname: "__DATA_CONST",
                vmaddr: 4294983680,
                vmsize: 16384,
                fileoff: 16384,
                filesize: 16384,
                maxprot: 3,
                initprot: 3,
                nsects: 1,
                flags: 16,
                data: 16384,
                sections(): Ok(
                    [
                        Section {
                            sectname: "__got",
                            segname: "__DATA_CONST",
                            addr: 4294983680,
                            size: 8,
                            offset: 16384,
                            align: 3,
                            reloff: 0,
                            nreloc: 0,
                            flags: 6,
                        },
                    ],
                ),
            },
            Segment {
                cmd: 25,
                cmdsize: 72,
                segname: "__LINKEDIT",
                vmaddr: 4295000064,
                vmsize: 16384,
                fileoff: 32768,
                filesize: 672,
                maxprot: 1,
                initprot: 1,
                nsects: 0,
                flags: 0,
                data: 672,
                sections(): Ok(
                    [],
                ),
            },
        ],
    },
    entry: 4294983528,
    old_style_entry: false,
    libs: [
        "self",
        "very_very_very_very_very_very_very_longid",
    ],
    name: None,
    little_endian: true,
    is_64: true,
    symbols(): [
        Ok(
            (
                "__mh_execute_header",
                Nlist {
                    n_strx: 2,
                    n_type: 15,
                    n_sect: 1,
                    n_desc: 16,
                    n_value: 4294967296,
                },
            ),
        ),
        Ok(
            (
                "_main",
                Nlist {
                    n_strx: 22,
                    n_type: 15,
                    n_sect: 1,
                    n_desc: 0,
                    n_value: 4294983528,
                },
            ),
        ),
        Ok(
            (
                "_printf",
                Nlist {
                    n_strx: 28,
                    n_type: 1,
                    n_sect: 0,
                    n_desc: 256,
                    n_value: 0,
                },
            ),
        ),
    ],
    exports(): Ok(
        [
            Export {
                name: "__mh_execute_header",
                info: Regular {
                    address: 0,
                    flags: 0,
                },
                size: 0,
                offset: 0,
            },
            Export {
                name: "_main",
                info: Regular {
                    address: 16232,
                    flags: 0,
                },
                size: 0,
                offset: 16232,
            },
        ],
    ),
    imports(): Ok(
        [],
    ),
}
